fixed dark mode issue (removed dark mode from tailwind)

--- a/src/App.css
+++ b/src/App.css
@@ -10,12 +10,12 @@
   --text-color: #111;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   :root {
     --background-color: rgb(20, 20, 20);
     --text-color: rgb(230, 230, 230);
   }
-}
+} */
 
 
 body {
